# autonomous_navigation

./: Dockerfile  README.md
src/global_path_planner/: CMakeLists.txt  package.xml
src/global_path_planner/cfg/: rrt_planner.yaml
src/global_path_planner/include/global_path_planner/: Point.h  rrtBase.h  rrtOctomap.h  rrtStarOctomap.h
src/global_path_planner/launch/: rrt_interactive.launch  rrt_star_interactive.launch  save_octomap.launch
src/global_path_planner/octo_maps/: cylinder.bt  maze.bt
src/global_path_planner/rviz/: global_plan.rviz  local_plan.rviz  rrt_interactive.rviz
src/global_path_planner/src/: rrt_interactive_node.cpp  rrt_star_interactive_node.cpp
src/loam_interface/: CMakeLists.txt
src/local_planner/: CMakeLists.txt
src/local_planner/launch/: local_planner.launch
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/sensor_scan_generation/: CMakeLists.txt
src/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/terrain_analysis/: CMakeLists.txt
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/: CMakeLists.txt
src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/vehicle_simulator/: CMakeLists.txt
src/vehicle_simulator/launch/: global_navigation.launch  local_navigation.launch  vehicle_simulator.launch
src/vehicle_simulator/log/: metrics_2025-10-1-21-16-40.txt  metrics_2025-10-10-3-54-16.txt  metrics_2025-10-2-11-50-16.txt  metrics_2025-10-2-12-21-5.txt  metrics_2025-10-2-19-1-8.txt  metrics_2025-10-2-19-12-57.txt  metrics_2025-10-2-19-17-28.txt  metrics_2025-10-2-19-7-31.txt  metrics_2025-10-2-20-45-33.txt  metrics_2025-10-3-15-41-45.txt  metrics_2025-10-3-15-45-47.txt  metrics_2025-10-3-16-35-23.txt  metrics_2025-10-3-16-9-11.txt  metrics_2025-10-4-10-19-9.txt  metrics_2025-10-4-10-53-18.txt  metrics_2025-10-4-10-7-10.txt  metrics_2025-10-5-14-33-18.txt  metrics_2025-10-5-14-44-21.txt  metrics_2025-10-5-14-49-49.txt  metrics_2025-10-7-18-12-22.txt  metrics_2025-10-7-18-27-58.txt  metrics_2025-10-7-18-36-8.txt  metrics_2025-10-7-18-38-21.txt  metrics_2025-10-7-19-0-20.txt  metrics_2025-10-7-19-11-56.txt  metrics_2025-10-7-19-21-12.txt  (+126 more)
src/visualization_tools/: CMakeLists.txt
(+8 files in other folders)
